@@ -8,7 +8,7 @@ Source: 	%{name}-%{version}.tar.gz
 Source1:        fdk-aac-0.1.4-1%{?dist}.%{_host_cpu}.rpm
 Source2:        libmad-0.15.1b-5%{?dist}.%{_host_cpu}.rpm
 Source3:        glassplayer-0.6.2-1%{?dist}.%{_host_cpu}.rpm
-Source4:        webhost-0.8.5-1%{?dist}.%{_host_cpu}.rpm
+Source4:        webhost-0.8.7-1%{?dist}.%{_host_cpu}.rpm
 BuildRequires:	qt-devel
 BuildRoot:      %{_tmppath}/%{name}-%{version}-%{release}-root
 Requires:       httpd
