@@ -49,3 +49,5 @@
 	* Incremented the webhost version to 0.8.5.
 2016-01-28 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 0.6.0.
+2016-01-31 Fred Gleason <fredg@paravelsystems.com>
+	* Incremented the webhost version to 0.8.7.
